modules/velos_single/main.tf
/**
 * Copyright 2018 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/******************************************
  Firewall Rules Creation
 *****************************************/

resource "google_compute_firewall" "velos-backend-control" {
  name          = "velos-backend-control"
  description   = "Control plane between Velostrata Backend and Velostrata Manager"
  network       = var.network_name
  project       = var.project_id
  source_ranges = ["192.168.1.0/24"]
  target_tags   = ["fw-velosmanager"]
  depends_on    = ["module.vpc"]

  allow {
    protocol = "tcp"
    ports    = ["9119"]
  }
}

resource "google_compute_firewall" "velos-ce-backend" {
  name          = "velos-ce-backend"
  description   = "Encrypted migration data sent from Velostrata Backend to Cloud Extensions"
  network       = var.network_name
  project       = var.project_id
  source_ranges = ["192.168.1.0/24"]
  target_tags   = ["fw-velostrata"]
  depends_on    = ["module.vpc"]

  allow {
    protocol = "tcp"
    ports    = ["9111"]
  }
}

resource "google_compute_firewall" "velos-ce-control" {
  name          = "velos-ce-control"
  description   = "Control plane between Cloud Extensions and Velostrata Manager"
  network       = var.network_name
  project       = var.project_id
  source_tags   = ["fw-velosmanager"]
  target_tags   = ["fw-velostrata"]
  depends_on    = ["module.vpc"]

  allow {
    protocol = "tcp"
    ports    = ["443", "9111"]
  }
}

resource "google_compute_firewall" "velos-ce-cross" {
  name          = "velos-ce-cross"
  description   = "Synchronization between Cloud Extension nodes"
  network       = var.network_name
  project       = var.project_id
  source_tags   = ["fw-velostrata"]
  target_tags   = ["fw-velostrata"]
  depends_on    = ["module.vpc"]

  allow {
    protocol = "all"
  }
}

resource "google_compute_firewall" "velos-console-probe" {
  name          = "velos-console-probe"
  description   = "Allows the Velostrata Manager to check if the SSH or RDP console on the migrated VM is available"
  network       = var.network_name
  project       = var.project_id
  source_tags   = ["fw-velosmanager"]
  target_tags   = ["fw-workload"]
  depends_on    = ["module.vpc"]

  allow {
    protocol = "tcp"
    ports    = ["22", "3389"]
  }
}

resource "google_compute_firewall" "velos-vcplugin" {
  name          = "velos-vcplugin"
  description   = "Control plane between vCenter plugin and Velostrata Manager"
  network       = var.network_name
  project       = var.project_id
  source_ranges = ["192.168.1.0/24"]
  target_tags   = ["fw-velosmanager"]
  depends_on    = ["module.vpc"]

  allow {
    protocol = "tcp"
    ports    = ["443"]
  }
}

resource "google_compute_firewall" "velos-webui" {
  name          = "velos-webui"
  description   = "HTTPS access to Velostrata Manager for web UI"
  network       = var.network_name
  project       = var.project_id
  source_ranges = ["192.168.1.0/24", "10.10.20.0/24"]
  target_tags   = ["fw-velosmanager"]
  depends_on    = ["module.vpc"]

  allow {
    protocol = "tcp"
    ports    = ["443"]
  }
}

resource "google_compute_firewall" "velos-workload" {
  name          = "velos-workload"
  description   = "iSCSI for data migration and syslog"
  network       = var.network_name
  project       = var.project_id
  source_ranges = ["192.168.1.0/24", "10.10.20.0/24"]
  target_tags   = ["fw-velosmanager"]
  depends_on    = ["module.vpc"]

  allow {
    protocol = "tcp"
    ports    = ["3260"]
  }
  allow {
    protocol = "udp"
    ports    = ["514"]
  }
}

###############################################################################
#                          IAM (service accounts, roles)
###############################################################################

/******************************************
  Custom Roles
 *****************************************/

resource "google_project_iam_custom_role" "velos_gcp_mgmt_role" {
  role_id     = "velosMgmt"
  title       = "Velostrata Manager"
  description = "Velostrata Manager"
  permissions = ["compute.addresses.create", "compute.addresses.createInternal", "compute.addresses.delete", "compute.addresses.deleteInternal", "compute.addresses.get", "compute.addresses.list", "compute.addresses.setLabels", "compute.addresses.use", "compute.addresses.useInternal", "compute.diskTypes.get", "compute.diskTypes.list", "compute.disks.create", "compute.disks.delete", "compute.disks.get", "compute.disks.list", "compute.disks.setLabels", "compute.disks.update", "compute.disks.use", " [...]
  project     = var.project_id
  depends_on = ["module.vpc"]
}

resource "google_project_iam_custom_role" "velos_gcp_ce_role" {
  role_id     = "velosCe"
  title       = "Velostrata Storage Access"
  description = "Velostrata Storage Access"
  permissions = ["storage.objects.create", "storage.objects.delete", "storage.objects.get", "storage.objects.list", "storage.objects.update"]
  project     = var.project_id
  depends_on = ["module.vpc"]
}

/******************************************
 Service Accounts
 *****************************************/

resource "google_service_account" "velos-manager" {
  account_id   = "velos-manager"
  display_name = "velos-manager"
  project      = var.project_id
depends_on = ["google_project_iam_custom_role.velos_gcp_mgmt_role", "google_project_iam_custom_role.velos_gcp_ce_role"]
}

resource "google_service_account" "velos-cloud-extension" {
  account_id   = "velos-cloud-extension"
  display_name = "velos-cloud-extension"
  project      = var.project_id
  depends_on = ["google_project_iam_custom_role.velos_gcp_mgmt_role", "google_project_iam_custom_role.velos_gcp_ce_role"]
}

/******************************************
  Bind Roles to Service Accounts
 *****************************************/

resource "google_project_iam_binding" "serviceAccountTokenCreator" {
  project = var.project_id
  role    = "roles/iam.serviceAccountTokenCreator"
    members = [
        "serviceAccount:velos-manager@${var.project_id}.iam.gserviceaccount.com"
    ]
  depends_on = ["google_service_account.velos-manager"]
}

resource "google_project_iam_binding" "serviceAccountUser" {
  project = var.project_id
  role    = "roles/iam.serviceAccountUser"
    members = [
        "serviceAccount:velos-manager@${var.project_id}.iam.gserviceaccount.com"
    ]
  depends_on = ["google_service_account.velos-manager"]
}

resource "google_project_iam_binding" "logWriter" {
   project = var.project_id
   role    = "roles/logging.logWriter"
    members = [
        "serviceAccount:velos-manager@${var.project_id}.iam.gserviceaccount.com"
    ]
  depends_on = ["google_service_account.velos-manager"]
}

resource "google_project_iam_binding" "metricWriter" {
   project = var.project_id
   role    = "roles/monitoring.metricWriter"
    members = [
        "serviceAccount:velos-manager@${var.project_id}.iam.gserviceaccount.com"
    ]
  depends_on = ["google_service_account.velos-manager"]
}

resource "google_project_iam_binding" "monitoring" {
   project = var.project_id
   role    = "roles/monitoring.viewer"
    members = [
        "serviceAccount:velos-manager@${var.project_id}.iam.gserviceaccount.com"
    ]
  depends_on = ["google_service_account.velos-manager"]
}

resource "google_project_iam_binding" "logWriter-ce" {
   project = var.project_id
   role    = "roles/logging.logWriter"
    members = [
        "serviceAccount:velos-cloud-extension@${var.project_id}.iam.gserviceaccount.com"
    ]
  depends_on = ["google_service_account.velos-cloud-extension"]
}

resource "google_project_iam_binding" "metricWriter-ce" {
   project = var.project_id
   role    = "roles/monitoring.metricWriter"
    members = [
        "serviceAccount:velos-cloud-extension@${var.project_id}.iam.gserviceaccount.com"
    ]
  depends_on = ["google_service_account.velos-cloud-extension"]
}

resource "google_project_iam_binding" "velos_gcp_mgmt" {
   project = var.project_id
   role    = "projects/${var.project_id}/roles/velosMgmt"
    members = [
        "serviceAccount:velos-manager@${var.project_id}.iam.gserviceaccount.com"
    ]
  depends_on = ["google_service_account.velos-cloud-extension"]
}

resource "google_project_iam_binding" "velos_gcp_ce" {
   project = var.project_id
   role    = "projects/${var.project_id}/roles/velosCe"
    members = [
        "serviceAccount:velos-cloud-extension@${var.project_id}.iam.gserviceaccount.com"
    ]
  depends_on = ["google_service_account.velos-cloud-extension"]
}
